# VectorDB_Comparison

./: README.md  benchmark.py  docker-compose.yml  init_postgres.sql  pyproject.toml  requirements.txt  results.csv  visualize_results.py
vdb_comparison/: __init__.py  data_management.py  evaluation.py  metrics.py  search_engines.py
